@@ -160,31 +160,32 @@ func TestSessionSCfgAsMapInterface(t *testing.T) {
 	},
 }`
 	eMap := map[string]interface{}{
-		"enabled":               false,
-		"listen_bijson":         "127.0.0.1:2014",
-		"chargers_conns":        []string{},
-		"rals_conns":            []string{},
-		"cdrs_conns":            []string{},
-		"resources_conns":       []string{},
-		"thresholds_conns":      []string{},
-		"stats_conns":           []string{},
-		"routes_conns":          []string{},
-		"attributes_conns":      []string{},
-		"replication_conns":     []string{},
-		"debit_interval":        "0",
-		"store_session_costs":   false,
-		"min_call_duration":     "0",
-		"max_call_duration":     "3h0m0s",
-		"min_dur_low_balance":   "0",
-		"session_ttl":           "0",
-		"session_indexes":       []string{},
-		"client_protocol":       1.0,
-		"channel_sync_interval": "0",
-		"terminate_attempts":    5,
-		"alterable_fields":      []string{},
-		"session_ttl_last_used": "0",
-		"session_ttl_max_delay": "0",
-		"session_ttl_usage":     "0",
+		"enabled":                false,
+		"listen_bijson":          "127.0.0.1:2014",
+		"chargers_conns":         []string{},
+		"rals_conns":             []string{},
+		"cdrs_conns":             []string{},
+		"resources_conns":        []string{},
+		"thresholds_conns":       []string{},
+		"stats_conns":            []string{},
+		"routes_conns":           []string{},
+		"attributes_conns":       []string{},
+		"replication_conns":      []string{},
+		"debit_interval":         "0",
+		"store_session_costs":    false,
+		"min_call_duration":      "0",
+		"max_call_duration":      "3h0m0s",
+		"min_dur_low_balance":    "0",
+		"session_ttl":            "0",
+		"session_indexes":        []string{},
+		"client_protocol":        1.0,
+		"channel_sync_interval":  "0",
+		"terminate_attempts":     5,
+		"alterable_fields":       []string{},
+		"session_ttl_last_used":  "0",
+		"session_ttl_max_delay":  "0",
+		"session_ttl_usage":      "0",
+		"session_ttl_last_usage": "0",
 		"stir": map[string]interface{}{
 			"allowed_attest":      []string{"*any"},
 			"payload_maxduration": "-1",
@@ -237,31 +238,32 @@ func TestSessionSCfgAsMapInterface(t *testing.T) {
 		},
 	}`
 	eMap = map[string]interface{}{
-		"enabled":               false,
-		"listen_bijson":         "127.0.0.1:2014",
-		"chargers_conns":        []string{"*internal"},
-		"rals_conns":            []string{"*internal"},
-		"cdrs_conns":            []string{"*internal"},
-		"resources_conns":       []string{"*internal"},
-		"thresholds_conns":      []string{"*internal"},
-		"stats_conns":           []string{"*internal"},
-		"routes_conns":          []string{"*internal"},
-		"attributes_conns":      []string{"*internal"},
-		"replication_conns":     []string{"*localhost"},
-		"debit_interval":        "0",
-		"store_session_costs":   false,
-		"min_call_duration":     "0",
-		"max_call_duration":     "3h0m0s",
-		"min_dur_low_balance":   "0",
-		"session_ttl":           "0",
-		"session_indexes":       []string{},
-		"client_protocol":       1.0,
-		"channel_sync_interval": "0",
-		"terminate_attempts":    5,
-		"alterable_fields":      []string{},
-		"session_ttl_last_used": "0",
-		"session_ttl_max_delay": "0",
-		"session_ttl_usage":     "0",
+		"enabled":                false,
+		"listen_bijson":          "127.0.0.1:2014",
+		"chargers_conns":         []string{"*internal"},
+		"rals_conns":             []string{"*internal"},
+		"cdrs_conns":             []string{"*internal"},
+		"resources_conns":        []string{"*internal"},
+		"thresholds_conns":       []string{"*internal"},
+		"stats_conns":            []string{"*internal"},
+		"routes_conns":           []string{"*internal"},
+		"attributes_conns":       []string{"*internal"},
+		"replication_conns":      []string{"*localhost"},
+		"debit_interval":         "0",
+		"store_session_costs":    false,
+		"min_call_duration":      "0",
+		"max_call_duration":      "3h0m0s",
+		"min_dur_low_balance":    "0",
+		"session_ttl":            "0",
+		"session_indexes":        []string{},
+		"client_protocol":        1.0,
+		"channel_sync_interval":  "0",
+		"terminate_attempts":     5,
+		"alterable_fields":       []string{},
+		"session_ttl_last_used":  "0",
+		"session_ttl_max_delay":  "0",
+		"session_ttl_usage":      "0",
+		"session_ttl_last_usage": "0",
 		"stir": map[string]interface{}{
 			"allowed_attest":      []string{"*any"},
 			"payload_maxduration": "-1",
